# codeinject

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  calc_x64_windows.asm  codeinject.cpp  configure.sh  main.cpp  run.sh
binary/: CMakeLists.txt  binary.cpp  binary.h
docs/html/: annotated.html  binary_8h_source.html  classcodeinject_1_1binary_1_1BaseBinary-members.html  classcodeinject_1_1binary_1_1BaseBinary.html  classcodeinject_1_1binary_1_1Bfd-members.html  classcodeinject_1_1binary_1_1Bfd.html  classcodeinject_1_1binary_1_1BinaryParser-members.html  classcodeinject_1_1binary_1_1BinaryParser.html  classcodeinject_1_1binary_1_1CodeBinary-members.html  classcodeinject_1_1binary_1_1CodeBinary.html  classcodeinject_1_1binary_1_1ElfBinary-members.html  classcodeinject_1_1binary_1_1ElfBinary.html  classcodeinject_1_1binary_1_1FileDescriptor-members.html  classcodeinject_1_1binary_1_1FileDescriptor.html  classcodeinject_1_1binary_1_1PeBinary-members.html  classcodeinject_1_1binary_1_1PeBinary.html  classcodeinject_1_1binary_1_1Section-members.html  classcodeinject_1_1binary_1_1Section.html  classcodeinject_1_1inject_1_1CodeInject-members.html  classcodeinject_1_1inject_1_1CodeInject.html  classcodeinject_1_1inject_1_1ElfCodeInject-members.html  classcodeinject_1_1inject_1_1ElfCodeInject.html  classcodeinject_1_1inject_1_1PeCodeInject-members.html  classcodeinject_1_1inject_1_1PeCodeInject.html  classes.html  dir_0cad25a73c69379bfe86dc90f955a28f.html  dir_8e6f16c5698293c4f4f880b5b783610f.html  dir_d44c64559bbebec7f509842c48db8b23.html  elf_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  inject_8h_source.html  menudata.js  structElf32__Chdr-members.html  structElf32__Chdr.html  structElf32__Dyn-members.html  structElf32__Dyn.html  (+91 more)
docs/latex/: annotated.tex  binary_8h_source.tex  classcodeinject_1_1binary_1_1BaseBinary.eps  classcodeinject_1_1binary_1_1BaseBinary.tex  classcodeinject_1_1binary_1_1Bfd.eps  classcodeinject_1_1binary_1_1Bfd.tex  classcodeinject_1_1binary_1_1BinaryParser.eps  classcodeinject_1_1binary_1_1BinaryParser.tex  classcodeinject_1_1binary_1_1CodeBinary.eps  classcodeinject_1_1binary_1_1CodeBinary.tex  classcodeinject_1_1binary_1_1ElfBinary.eps  classcodeinject_1_1binary_1_1ElfBinary.tex  files.tex  (+63 more)
include/: CMakeLists.txt  elf.h  winnt.h
inject/: CMakeLists.txt  CodeInject.cpp  CodeInject.h  inject.cpp  inject.h
test/: CMakeLists.txt
test_code/: CMakeLists.txt  binary_test.cpp
test_files/: codeinject  elf32_backdoor.s  elf_32  elf_32_pie  elf_64  elf_64_backdoor.s  elf_64_edit  elf_64_inject  elf_64_pie  elfinject  elfinject.c  file_stream_test  ls.copy_  ls.copy__  pe_32  pe_32_back_up  pe_32_backdoor.s  pe_64  pe_64 (또 다른 사본)  win_backdoor.s  win_backdoor_32.s  win_backdoor_64.s
(+27 files in other folders)
